# qcalculator

./: .gitmodules  BUILDING.md  CMakeLists.txt  README.md  license  qcalc.pro  readme.md
python/addon/: addon_bundle.json  bitview.json  bitview.py  bundleaddons.sh  factorial.py  keypad.py  metadata.json  nilakantha.py  numberview.json  numberview.py  sample_exprtk.py  sample_factorial.py  sample_gui.json  sample_gui.py
python/addon/biteditor/: biteditor.py
python/addon/factorial/: factorial.py
python/addon/gui/: biteditor.py  keypad.py  numberview.py
python/addon/keypad/: keypad.py
python/addon/nilakantha/: nilakantha.py
python/addon/numberview/: numberview.py
python/addon/sample_exprtk/: sample_exprtk.py
python/addon/sample_gui/: sample_gui.py
python/addon/scripts/: factorial.py  nilakantha.py
python/lib/: exprtk.py  mpreal.py  qcalc.py
python/system/: exprtk.py  mpreal.py
python/system/qcalc/: gui.py
res/: README.md  app.rc
src/: main.cpp  settingconstants.hpp
src/adaptors/: exprtk_mpdecimal_adaptor.hpp
src/addon/: addon.cpp  addon.hpp  addonhelper.cpp  addoninstaller.cpp  addonmanager.cpp  addonmanager.hpp  library.hpp
src/arcpp/: archive.cpp
src/calculator/: expressionparser.cpp  expressionparser.hpp  function.hpp  script.hpp  scriptfunction.hpp  scripthandler.cpp  scripthandler.hpp  scriptvarargfunction.hpp  symboltable.cpp  symboltable.hpp
src/cpp/: addon.cpp  addon.hpp  addonhelper.cpp  addonhelper.hpp  addoninstaller.cpp  addoninstaller.hpp  addonmanager.cpp  addonmanager.hpp  addonmanagerlistener.hpp  addonmetadata.hpp  calculatorengine.cpp  calculatorengine.hpp  common.hpp  constant.hpp  fractiontest.cpp  fractiontest.hpp  function.hpp  history.hpp  io.cpp  io.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  model.cpp  model.hpp  nativeinterface.cpp  nativeinterface.hpp  numberformat.cpp  numberformat.hpp  numeralrep.hpp  numeralsystem.hpp  numpadkey.cpp  numpadkey.hpp  observable.hpp  paths.cpp  paths.hpp  plugin.cpp  plugin.hpp  presenter.cpp  presenter.hpp  (+26 more)
src/cpp/addon/: addonhelper.cpp  addonhelper.hpp  addoninstaller.cpp  addonmanager.cpp  addonmanager.hpp  addonmetadata.hpp
src/cpp/calc/: arithmetictype.hpp  expressionparser.cpp  expressionparser.hpp  numberformat.cpp  numberformat.hpp  pythonparser.cpp  pythonparser.hpp  script.hpp  scriptfunction.hpp  scripthandler.cpp  scripthandler.hpp  scriptvarargfunction.hpp  symboltable.cpp  symboltable.hpp
src/cpp/cpython/: pythoninclude.hpp  pyutil.cpp  pyutil.hpp  symboltableconverter.cpp  symboltableconverter.hpp
src/cpp/gui/: addontester.hpp  addontesterdialog.hpp  main.cpp  mainpresenter.cpp  mainpresenter.hpp  mainview.hpp  mainwindow.cpp  mainwindow.hpp  settingsdialog.cpp  settingsdialog.hpp  settingsdialogstate.hpp
src/cpp/io/: fileoperations.cpp  fileoperations.hpp  io.cpp  io.hpp  paths.cpp  paths.hpp  serializer.cpp  serializer.hpp
src/cpp/math/: arithmetictype.hpp  expressionparser.cpp  expressionparser.hpp  fractiontest.cpp  fractiontest.hpp  function.hpp  numberformat.cpp  numberformat.hpp  numeralsystem.hpp  scriptfunction.hpp  scripthandler.cpp  scripthandler.hpp  scriptvarargfunction.hpp  symboltable.cpp  symboltable.hpp
src/cpp/pymodule/: exprtkmodule.cpp  moduletypes.hpp  presentermodule.cpp  presentermodule.hpp  pysymboltable.cpp  pysymboltable.hpp  symboltablemodule.cpp  symboltablemodule.hpp
src/cpp/util/: uidgenerator.hpp
src/cpython/: interactiveinterpreter.cpp  interactiveinterpreter.hpp  pyutil.cpp  pyutil.hpp  symboltableconverter.cpp  symboltableconverter.hpp
src/cpython/modules/: exprtkmodule.cpp  exprtkmodule.hpp  modulecommon.hpp  mprealmodule.cpp  mprealmodule.hpp  stdredirmodule.cpp  stdredirmodule.hpp
src/cpython/types/: pympreal.cpp
src/forms/: mainwindow.ui  settingsdialog.ui
src/gui/: calculatorwindow.cpp  calculatorwindow.hpp  mainwindow.cpp  mainwindow.hpp  symbolseditorwindow.cpp  symbolseditorwindow.hpp  terminalwindow.hpp
src/gui/dialog/: aboutdialog.hpp  addoninstalldialog.hpp  addontesterdialog.hpp  symbolsdialog.cpp  symbolsdialog.hpp  (+1 more)
src/io/: archive.cpp  archive.hpp  fileoperations.cpp  fileoperations.hpp  paths.cpp  paths.hpp  serializer.cpp  serializer.hpp  stringutil.hpp  to_wstring.hpp
src/math/: arithmetictype.hpp  expressionparser.cpp  expressionparser.hpp  fractiontest.cpp  fractiontest.hpp  function.hpp  numberformat.cpp  numberformat.hpp  numeralsystem.hpp  script.hpp  scriptfunction.hpp  scripthandler.cpp  scripthandler.hpp  scriptvarargfunction.hpp  symboltable.cpp  symboltable.hpp
src/pycx/: include.hpp  interpreter.cpp  interpreter.hpp  interpreterstate.hpp  pythoninclude.hpp  pythoninterpreterstate.hpp  symboltableutil.cpp  symboltableutil.hpp
src/python/: bitview.json  bitview.py  history.json  history.py  interpreter.cpp  interpreter.hpp  interpreterhandler.cpp  interpreterhandler.hpp  interpreterstate.hpp  keypad.json  keypad.py  numsys.json  numsys.py  pythoninterpreterstate.hpp  qcalc.py  sample_exprtk.json  sample_exprtk.py  sample_factorial.json  sample_factorial.py  sample_gui.py  sample_sym.json  sample_sym.py  sampleaddon.py  symbolseditor.py  symboltableutil.cpp  symboltableutil.hpp
src/settings/: settingconstants.hpp  settings.cpp  settings.hpp
src/util/: interpreterhandler.cpp  interpreterhandler.hpp  stringsplit.hpp  uidgenerator.hpp
src/widgets/: addonitemwidget.cpp  addonitemwidget.hpp  addontab.cpp  addontab.hpp  addonwidget.hpp  builtinseditor.cpp  builtinseditor.hpp  functionseditor.cpp  functionseditor.hpp  generaltab.cpp  generaltab.hpp  historylabel.hpp  historywidget.hpp  installaddonitemwidget.hpp  namedvalueeditor.cpp  namedvalueeditor.hpp  pythontab.cpp  pythontab.hpp  scriptseditor.cpp  scriptseditor.hpp  stringedititemwidget.hpp  symbolseditor.cpp  symbolseditor.hpp  terminalwidget.hpp
src/windows/: aboutdialog.hpp  addoninstalldialog.hpp  calculatorwindow.cpp  calculatorwindow.hpp  calculatorwindowactions.hpp  pythonconsolewindow.hpp  settingsdialog.cpp  settingsdialog.hpp  symbolseditorwindow.cpp  symbolseditorwindow.hpp  terminalwindow.hpp
(+76 files in other folders)
